Changes for 4.2.5rc1

New features:
..F....PS. [ZBXNEXT-5176,ZBXNEXT-5205] blocked zero item history/trends period being overridden by global configuration (miks, wiper)

Bug fixes:
..F....... [ZBX-16329] fixed duplicate value checking in trigger action conditions (Ivo)
A......... [ZBX-15562] reworked history.get API method; fixed output as well as other known issues in history API (miks, Sasha)
..F....... [ZBX-15976] fixed groups filter being reset after check now request in items (talbergs)
..F....... [ZBX-16135] fixed error messages in XML export files (averza)
A......... [ZBX-16213] fixed PostgreSQL bad performance on history tables (averza)
..F....... [ZBX-16176] preserve trailing spaces in history values (averza)
..F....... [ZBX-16169] improved performance of map navigation tree widget (miks)
..F....... [ZBX-16288] fixed when unknown resource logged in audit log when working with dashboards (vasilijs)
A......... [ZBX-16134] fixed duplicate triggers can be created using API and XML import (agriscenko)
..F....... [ZBX-15969] fixed displaying of very small values that are more than 2 decimal points in latest data (Ivo)
..F....... [ZBX-16280] fixed when Plain Text Widgets do not display as HTML when option is selected (vasilijs)
A.F....... [ZBX-16012] fixed confusing error message "Cannot read JSON." in HTTP agent item (vasilijs)
.......PS. [ZBX-16263] fixed preprocessing step history is not reset when "on fail" "set value" action triggers (akozlovs)
.......PS. [ZBX-16270] fixed memory leak in IPC service when queueing multiple messages to client (akozlovs)
...G...... [ZBX-15962] added mounted filesystems to vfs.fs.discovery of windows agent (asestakovs)
..F....... [ZBX-16204] fixed undefined offset in CControllerWidgetProblemHostsView (rlataria)
..F....... [ZBX-16153] fixed 500 Internal Server Error when trying to preview pie/exploded graph without items (rlataria)