@@ -4,6 +4,7 @@ New features:
 ..F....PS. [ZBXNEXT-5176,ZBXNEXT-5205] blocked zero item history/trends period being overridden by global configuration (miks, wiper)
 
 Bug fixes:
+..F....... [ZBX-15343] fixed JS memory leak in hintboxes in graph widget (Ivo)
 ..F....... [ZBX-16329] fixed duplicate value checking in trigger action conditions (Ivo)
 A......... [ZBX-15562] reworked history.get API method; fixed output as well as other known issues in history API (miks, Sasha)
 ..F....... [ZBX-15976] fixed groups filter being reset after check now request in items (talbergs)
@@ -479,6 +480,7 @@ New features:
 ..F....PS. [ZBXNEXT-5176,ZBXNEXT-5205] blocked zero item history/trends period being overridden by global configuration (miks, wiper)
 
 Bug fixes:
+..F....... [ZBX-15343] fixed JS memory leak in hintboxes in graph widget (Ivo)
 ..F....... [ZBX-16329] fixed duplicate value checking in trigger action conditions (Ivo)
 A......... [ZBX-15562] reworked history.get API method; fixed output as well as other known issues in history API (miks, Sasha)
 ..F....... [ZBX-16135] fixed error messages in XML export files (averza)
